--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -160,7 +160,7 @@
 
 
 <!-- Google Analytics -->
-{% if site.ga_track_id %}
+<!-- {% if site.ga_track_id %}
 <script>
     // dynamic User by Hux
     var _gaId = '{{ site.ga_track_id }}';
@@ -175,11 +175,11 @@
     ga('create', _gaId, _gaDomain);
     ga('send', 'pageview');
 </script>
-{% endif %}
+{% endif %} -->
 
 
 <!-- Baidu Tongji -->
-{% if site.ba_track_id %}
+<!-- {% if site.ba_track_id %}
 <script>
     // dynamic User by Hux
     var _baId = '{{ site.ba_track_id }}';
@@ -193,7 +193,7 @@
       s.parentNode.insertBefore(hm, s);
     })();
 </script>
-{% endif %}
+{% endif %} -->
 
 
 
